// Copyright 2020 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.event.payloads;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message HistogramProto {
  google.protobuf.Timestamp reference_timestamp = 1;
  map<int32, int32> bucket_weights = 2;
  double total_weight = 3;
}

// checkpoint message sent from delegate
message ContainerStateProto {
  string cluster_id = 1;
  string cluster_name = 2;
  string cloud_provider_id = 3;
  string kube_system_uid = 4;

  string namespace = 5;
  string pod_name = 6;
  string container_name = 7;

  int64 memory_peak = 8;
  HistogramProto cpu_histogram = 9;
  google.protobuf.Timestamp first_sample_start = 10;
  google.protobuf.Timestamp last_sample_start = 11;
  int32 total_samples_count = 12;

  // change this when changing semantics (eg: parameters of the histogram)
  // to not mix-up different histograms on the server side
  int32 version = 13;

  // timestamp of the memory_peak observation
  google.protobuf.Timestamp memory_peak_time = 14;

  HistogramProto cpu_histogram_v2 = 15;
}
